# Proyects-C

algoritmo_busqueda_profundidad/: CMakeLists.txt  main.c
algoritmo_kahn/: CMakeLists.txt
algoritmo_kahn/graph/: graph.c  graph.h
algoritmo_kahn/queue/: queue.c  queue.h
algoritmos_avanzados_grafos/: CMakeLists.txt  main.c
analizador_dependencias/: CMakeLists.txt
analizador_dependencias/include/: graph.h  module.h  project.h  tarjan.h  topological.h
analizador_dependencias/src/: graph.c  main.c  module.c  project.c  tarjan.c  topological.c
aplicaciones_tiempoReal/: CMakeLists.txt  main.c
arboles-binarios/: CMakeLists.txt
arboles-binarios/arbol-binario-BD/: arbol.c  arbol.h  main.c
arboles-binarios/nodo/: ArbolImplementacion.c  nodo.c  nodo.h
doble-hashing/: CMakeLists.txt  main.c
grafo_ponderado/: CMakeLists.txt  main.c
impl_TST/: CMakeLists.txt  main.c
impl_arbolB+/: CMakeLists.txt  main.c
impl_arbolB_basico/: CMakeLists.txt  main.c
impl_arbolB_masCompleto/: CMakeLists.txt  main.c
impl_arbolB_punterosRegistrados/: CMakeLists.txt  main.c
impl_grafos/: CMakeLists.txt  lista_adyacencia.c  matriz_adyacencia.c
impl_hatTrie/: CMakeLists.txt  main.c
impl_matriz_adyacencia/: CMakeLists.txt  main.c
impl_trie_basico/: CMakeLists.txt  main.c
implementacion_algoritmos/: CMakeLists.txt
implementacion_algoritmos/algoritmos/: bellman_ford.c  bellman_ford.h  common_types.h  cycle_detection.c  cycle_detection.h  dfs_bfs.c  dfs_bfs.h  dijkstra.c  dijkstra.h  kruskal.c  kruskal.h  route_planner.c  route_planner.h
implementacion_algoritmos/core/: line.c  line.h  route.c  route.h  station.c  station.h  transit_system.c  transit_system.h  transit_system_main.c
implementacion_algoritmos/estructura_datos/: hash_map.c  hash_map.h  priority_queue.c  priority_queue.h  union_find.c  union_find.h
implementacion_algoritmos/graph/: graph.c  graph.h  lista_adyacente.c  matrix_adyacente.c
implementacion_algoritmos/navegacion_gps/: CMakeLists.txt  gps_system.c  gps_system.h  main_gps.c
implementacion_algoritmos/pricing/: fare_calculator.c  fare_calculator.h  price_matrix.c  price_matrix.h
implementacion_algoritmos/realtime/: delay_tracker.c  delay_tracker.h  realtime_data.c  realtime_data.h
implementacion_algoritmos/scheduling/: schedule.c  schedule.h  timetable.c  timetable.h
implementacion_algoritmos/social_network/: CMakeLists.txt  social_network.c  social_network.h  social_network_examples.c
implementacion_algoritmos/tests/: test_traversals.c
implementacion_algoritmos/utils/: benchmarks.c  file_io.c  file_io.h  time_utils.c  time_utils.h  visualization.c  visualization.h
implementacion_hash_encadenamiento/: CMakeLists.txt  main.c
lista_adyacencia/: CMakeLists.txt  main.c
ordenacion_topologica_dfs/: CMakeLists.txt  main.c
rehashing/: CMakeLists.txt  main.c
representaciones_tiposGrafos/: CMakeLists.txt  main.c
sondeo_cuadratico/: CMakeLists.txt  main.c
sondeo_lineal/: CMakeLists.txt  main.c
